fix: driver list offer