@@ -24,7 +24,9 @@ import org.springframework.transaction.event.TransactionalEventListener;
 import java.io.IOException;
 import java.time.Instant;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -33,9 +35,12 @@ public class DriverOfferService {
     private final OfferRepository offerRepo;
     private final TripRepository tripRepo;
     private final ObjectMapper om;
+    private final ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
 
     // map driverId -> list of active emitters for that driver
     private final ConcurrentMap<Long, CopyOnWriteArrayList<SseEmitter>> driverEmitters = new ConcurrentHashMap<>();
+    private final ConcurrentMap<SseEmitter, ScheduledFuture<?>> emitterTasks = new ConcurrentHashMap<>();
+    private static final long POLL_PERIOD_SEC = 2;
 
     public DriverOfferService(OfferRepository offerRepo, TripRepository tripRepo, ObjectMapper om) {
         this.offerRepo = offerRepo;
@@ -44,8 +49,11 @@ public class DriverOfferService {
     }
 
     @Transactional(readOnly = true)
-    public List<Offer> listPendingOffers(Long driverId) {
-        return offerRepo.findAll().stream().filter(o -> o.getDriverId().equals(driverId) && o.getStatus()==OfferStatus.PENDING).toList();
+    public List<Map<String, Object>> listPendingOffers(Long driverId) {
+        return offerRepo.findAll().stream()
+                .filter(o -> o.getDriverId().equals(driverId) && o.getStatus() == OfferStatus.PENDING)
+                .map(o -> Map.of("id", o.getId(), "offer", o))
+                .collect(Collectors.toList());
     }
 
     public SseEmitter streamOffers(Long driverId) {
@@ -58,6 +66,10 @@ public class DriverOfferService {
         Runnable cleanup = () -> {
             // remove emitter from driver map(s)
             driverEmitters.forEach((id, list) -> list.remove(emitter));
+            ScheduledFuture<?> task = emitterTasks.remove(emitter);
+            if (task != null && !task.isCancelled()) {
+                task.cancel(true);
+            }
             try { emitter.complete(); } catch (Exception ignored) {}
             log.debug("Emitter cleaned up for driver {}", driverId);
         };
@@ -71,25 +83,38 @@ public class DriverOfferService {
 
         // initial trip list sent once on connect
         try {
-            List<Offer> offers = offerRepo.findAll().stream()
+            List<Map<String, Object>> offers = offerRepo.findAll().stream()
                     .filter(o -> o.getDriverId().equals(driverId) && o.getStatus() == OfferStatus.PENDING)
+                    .map(o -> Map.of("id", o.getId(), "offer", o))
                     .toList();
 
-            List<Trip> pendingTrips = offers.stream()
-                    .map(o -> tripRepo.findById(o.getTripId()).orElse(null))
-                    .filter(t -> t != null)
-                    .toList();
+            log.debug("Sending initial offers to driver {} ({} offers)", driverId, offers.size());
 
-            log.debug("Sending initial tripList to driver {} ({} trips)", driverId, pendingTrips.size());
-
-            if (!pendingTrips.isEmpty()) {
-                sendJson(emitter, "tripList", pendingTrips);
+            if (!offers.isEmpty()) {
+                sendJson(emitter, "offerList", offers);
             }
 
         } catch (IOException e) {
-            log.warn("Failed to send initial tripList to driver {}: {}", driverId, e.getMessage());
+            log.warn("Failed to send initial offers to driver {}: {}", driverId, e.getMessage());
             cleanup.run();
         }
+
+        // schedule polling task
+        ScheduledFuture<?> pollTask = scheduler.scheduleAtFixedRate(() -> {
+            try {
+                List<Map<String, Object>> offers = offerRepo.findAll().stream()
+                        .filter(o -> o.getDriverId().equals(driverId) && o.getStatus() == OfferStatus.PENDING)
+                        .map(o -> Map.of("id", o.getId(), "offer", o))
+                        .toList();
+
+                sendJson(emitter, "offerList", offers);
+            } catch (IOException e) {
+                log.warn("Failed to send offers to driver {}: {}", driverId, e.getMessage());
+                cleanup.run();
+            }
+        }, 0, POLL_PERIOD_SEC, TimeUnit.SECONDS);
+
+        emitterTasks.put(emitter, pollTask);
 
         return emitter;
     }
@@ -103,25 +128,30 @@ public class DriverOfferService {
         log.debug("onOfferCreated driverId={} emitters={} offerId={}", driverId, emitters == null ? 0 : emitters.size(), offer.getId());
         if (emitters == null || emitters.isEmpty()) return;
 
-        // fetch trip information for the offer and send trip payload to connected emitters
-        Trip trip = tripRepo.findById(offer.getTripId()).orElse(null);
-        if (trip == null) {
+        // send new trip (tripAdd)
+        Trip newTrip = tripRepo.findById(offer.getTripId()).orElse(null);
+        if (newTrip != null) {
             for (SseEmitter e : emitters) {
                 try {
-                    sendJson(e, "offerCreated", offer);
+                    sendJson(e, "tripAdd", newTrip);
                 } catch (IOException ex) {
-                    log.warn("Failed to send offerCreated to driver {}: {}", driverId, ex.getMessage());
+                    log.warn("Failed to send tripAdd to driver {}: {}", driverId, ex.getMessage());
                     try { e.completeWithError(ex); } catch (Exception ignore) {}
                 }
             }
-            return;
         }
+
+        // send refreshed trip list (tripList)
+        List<Map<String, Object>> offers = offerRepo.findAll().stream()
+                .filter(o -> o.getDriverId().equals(driverId) && o.getStatus() == OfferStatus.PENDING)
+                .map(o -> Map.of("id", o.getId(), "offer", o))
+                .toList();
 
         for (SseEmitter e : emitters) {
             try {
-                sendJson(e, "tripOffered", trip);
+                sendJson(e, "tripList", offers);
             } catch (IOException ex) {
-                log.warn("Failed to send tripOffered to driver {}: {}", driverId, ex.getMessage());
+                log.warn("Failed to send tripList to driver {}: {}", driverId, ex.getMessage());
                 try { e.completeWithError(ex); } catch (Exception ignore) {}
             }
         }
@@ -136,33 +166,17 @@ public class DriverOfferService {
         log.debug("onOfferRemoved driverId={} emitters={} offerId={}", driverId, emitters == null ? 0 : emitters.size(), offer.getId());
         if (emitters == null || emitters.isEmpty()) return;
 
-        // notify clients which trip was removed so they can update quickly
-        for (SseEmitter e : emitters) {
-            try {
-                sendJson(e, "tripRemoved", offer.getTripId());
-            } catch (IOException ex) {
-                log.warn("Failed to send tripRemoved to driver {}: {}", driverId, ex.getMessage());
-                try { e.completeWithError(ex); } catch (Exception ignore) {}
-            }
-        }
-
-        // send refreshed tripList (now that DB committed)
-        List<Offer> offers = offerRepo.findAll().stream()
+        // send refreshed offer list
+        List<Map<String, Object>> offers = offerRepo.findAll().stream()
                 .filter(o -> o.getDriverId().equals(driverId) && o.getStatus() == OfferStatus.PENDING)
+                .map(o -> Map.of("id", o.getId(), "offer", o))
                 .toList();
-
-        List<Trip> pendingTrips = offers.stream()
-                .map(o -> tripRepo.findById(o.getTripId()).orElse(null))
-                .filter(t -> t != null)
-                .toList();
-
-        log.debug("Sending refreshed tripList to driver {} ({} trips)", driverId, pendingTrips.size());
 
         for (SseEmitter e : emitters) {
             try {
-                sendJson(e, "tripList", pendingTrips);
+                sendJson(e, "offerList", offers);
             } catch (IOException ex) {
-                log.warn("Failed to send tripList to driver {}: {}", driverId, ex.getMessage());
+                log.warn("Failed to send offerList to driver {}: {}", driverId, ex.getMessage());
                 try { e.completeWithError(ex); } catch (Exception ignore) {}
             }
         }
